# simple-file-server

./: Dockerfile  LICENSE  README.md  pyproject.toml
simple_file_server/: server.py
